# red-ink

./: .gitignore  README.md  build.bat  build.sh
.docs/: 2022-03-16-hardware-change.md  README.md
.github/workflows/: client.yml  server.yml
hardware/: README.md
hardware/blender/: red-ink.blend
hardware/gcode/: vyper_e-ink-display-base-board.gcode
hardware/gcode/vyper/drafts/: AV_display-base-holes.gcode  AV_motherboard-base.gcode  AV_screen-topper-v3.gcode  AV_screen-toppper.gcode
hardware/stl/: e-ink-display-base-board.stl
hardware/stl/chasis-drafts/: chasis-angled.stl  screen-casing.stl  screen-topper-v2.stl  screen-topper-v3.stl  screen-toppper.stl
hardware/stl/drafts/: motherboard-base.stl
hardware/stl/reference-drafts/: display-base-holes.stl  motherboard-base.stl
hardware/stl/whole-drafts/: motherboard-container-draft.stl  screen-container-draft.stl
scripts/: build-firmware.bat  build-firmware.sh
src/net-display/: board-layout.h  mc.cpp  mc.h  net-display.ino  redis.cpp  redis.h
src/redink/: board-layout.h  lighting.cpp  lighting.h  mc.cpp  mc.h  redink.ino  redis.cpp  redis.h  screen.cpp  screen.h
src/redink-srv/: Cargo.toml
src/redink-ui/: .eslintrc.js  README.md  ember-cli-build.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/redink-ui/app/: app.js  index.html  router.js
src/redink-ui/app/config/: environment.d.ts
src/redink-ui/config/: environment.js
src/redink-ui/tests/: index.html  test-helper.js
src/redink-ui/translations/: en-us.yaml
src/redink-ui/types/: global.d.ts
(+2 files in other folders)
