[package]
name = "redink-srv"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "redink"
path = "src/bin/redink.rs"

[dependencies]
dotenv = { version = "0.15.0" }
env_logger = { version = "^0.9.0" }
log = { version = "^0.4.1" }
tide = { version = "^0.16.0" }
async-std = { version = "1.6.0", features = ["attributes"] }
chrono = { version = "^0.4" }
kramer = { version = "^1.1.0", features = ["kramer-async"] }

serde = { version = "^1.0" }
serde_json = { version = "^1.0" }
